<resources>
    <string name="app_name">InstGraph</string>
    <string name="log_in">Log in</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="about_app_and_security">About App and Security</string>
    <string name="client_id">a88f8db5624e4b1396f9d576c66653b6</string>
    <string name="redirect_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="show_dialog">show_dialog</string>
    <string name="app_info">App\'s gonna show user his profile overview.
        How many posts he has, when he got likes and when he increased his popularity.
        One of the features - graph to demonstrate his activity overview.</string>
    <string name="got_it">GOT IT</string>

</resources>
