<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instagramBrandTitle"
        android:text="@string/app_name"
        android:layout_above="@id/loginButton"
        android:gravity="center"
        android:fontFamily="serif"
        android:layout_marginBottom="100dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginButton"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:text="@string/log_in"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/app_info_and_security"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_margin="40dp"
        android:textSize="16sp"
        android:text="@string/about_app_and_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>