<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:text="@string/about_app_and_security"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="45dp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/app_info"
        android:layout_below="@id/title"
        android:text="@string/app_info"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/dismissDialogButton"
        android:layout_below="@id/app_info"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/got_it"
        android:textColor="@android:color/white"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

</RelativeLayout>